feat: regulatory scope, security review, intake wizard, canonical flow
Add Flyway V47-V50 for control regulatory tags, application security
review, intake Q&A, and canonical intake flow. Extend APIs and services
for seed filtering, assessment controls, intake wizard, and branching
demo alignment.

Frontend: intake wizard refactor, control catalog tags, applications and
audit respond/review UX, my-audits link class for E2E.

Testing: Maven profiles backend-smoke|unit|integration|regression;
ApiSurfaceRegression and lifecycle smoke tests; RegulatoryScopeMatcher
unit tests; Vitest smoke/regression scripts; Playwright regression suite
with shared Basic-auth login helper.

Docs: README, frontend/backend README, ops-runbook updated for migrations,
scripts, and local parity commands.

Made-with: Cursor